<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White" >

    
    <!-- kakao adjusted text alignment here -->
    
        <TextView
            android:id="@+id/textView2_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentTop="true"
            android:text="@string/middleTextInformation" />

        <TextView
            android:id="@+id/textView3_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2_information"
            android:layout_alignLeft="@+id/textView2_information"
            android:layout_alignRight="@+id/textView2_information"
            android:layout_centerHorizontal="true"
            android:gravity ="center"
            android:layout_marginTop="15dp"
            android:text="@string/bottomTextInformation" />

        <ImageView
            android:contentDescription="@string/desc"
            android:id="@+id/line_divider_information"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3_information"
            android:layout_marginTop="20dp"
            android:background="@color/Grey" />

        <Button
            android:id="@+id/button1_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_divider_information"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/ok"
            android:textColor="@color/Black"
            android:background="@color/White"/>

</RelativeLayout>