<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginBottom="10dp"
    android:background="@color/White"
    android:orientation="vertical"
    android:paddingBottom="30dp" >

    <ImageView
        android:id="@+id/check_in_step_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/check_in_confirmed" />

    <TextView
        android:id="@+id/check_in_process_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_in_step_image"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/please_tap"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="" />

    <TextView
        android:id="@+id/check_in_process_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_in_process_text1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/r_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="" />

</RelativeLayout>