<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/redeem_dialog" />

    <ImageView
        android:contentDescription="@string/desc"
        android:id="@+id/line_divider_information"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1_information"
        android:layout_marginTop="15dp"
        android:background="@color/Gray" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/line_divider_information" >

        <ImageView
            android:contentDescription="@string/desc"
            android:id="@+id/line_divider_information2"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/left_layout"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/Gray" />

        <LinearLayout
            android:id="@+id/left_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/right_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/line_divider_information2"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/White"
                android:text="@string/no_message"
                android:textColor="@color/Black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/line_divider_information2"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_confirm"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:background="@color/White"
                android:text="@string/yes"
                android:textColor="@color/Black" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>